@startuml
title Classes - Class Diagram

class Persona {
  -String nombre
  -String Apellido
  -int DNI
}
Persona : +saludar()
Persona : +despedirse()

class Paciente {
  -int peso
  -int altura
  -String sintomas
}

Paciente : +pagarTurno(Turno turno, double pago) 
Paciente : +saludar()
Paciente : +despedirse()
Paciente : +explicarSintomas()

class Medico {
  -Especialidad especialidad
	-double salario
	-Date ingreso
}

Medico : +atenderPaciente(Paciente paciente, Turno turno)
Medico : +saludar()
Medico : +despedirse()

class Especialidad {
  -String nombre
  -String descripcion
}

class Turno {
  -Paciente paciente;
  -Medico medico
  -DetallesTurno detallesTurno
  -Date ingreso
  -Date salida = null
  -boolean terminado = false
  -double precio
}

Turno : +terminarTurno(double pago)
Turno : +estadoTurno()

class DetallesTurno { 
  - String diagnostico
  - List<String> medicamentos
}

DetallesTurno : +addMedicamento(String medicamento)
DetallesTurno : +setMedicamentos(List<String> medicamentos)
DetallesTurno : +getMedicamentos()
DetallesTurno : +removeMedicamentos(int index)


Persona <|-- Paciente
Persona <|-- Medico
Paciente <|.. Turno 
Medico <|.. Turno 
DetallesTurno *.. Turno
Especialidad <|-- Medico
@enduml